--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       ❌ Incorrect: <span id="incorrectCount">0</span>
     </div>
 
+    <p id="progress">Question 1 of X</p> <!-- Contador de progreso -->
+    
     <h2 id="question">Loading question...</h2>
     <div id="options"></div>
 
