Las respuestas son Random en esta nueva version!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       ❌ Incorrect: <span id="incorrectCount">0</span>
     </div>
 
-    <p id="progress">Question 1 of X</p> <!-- Contador de progreso -->
+    <p id="progress">Question 1 of X</p>
     
     <h2 id="question">Loading question...</h2>
     <div id="options"></div>
